fix(chat-jump): fixed icon z-index

--- a/src/style.less
+++ b/src/style.less
@@ -317,7 +317,7 @@
     flex-shrink: 0;
     cursor: pointer;
     position: relative;
-    z-index: 1001;
+    z-index: 15;
 }
 
 .chat-jump-recent-indicator:hover [class*="truncate"]::after,
@@ -372,7 +372,7 @@ html.dark .chat-jump-recent-indicator [class*="overflow-hidden"]::after {
     flex-shrink: 0;
     cursor: pointer;
     position: relative;
-    z-index: 1001;
+    z-index: 15;
     font-size: 10px;
     line-height: 14px;
     text-align: center;
